add: log swagger
