# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  customerrors.CustomError:
+    properties:
+      code:
+        type: integer
+      description:
+        type: string
+      errorType:
+        type: string
+    type: object
   entities.Account:
     properties:
       accountId:
@@ -35,10 +44,10 @@ definitions:
       timestamp:
         type: string
     type: object
-  entities.Plan:
+  entities.PlanDetails:
     properties:
-      accountID:
-        type: integer
+      accountName:
+        type: string
       amount:
         type: number
       createDate:
@@ -47,14 +56,12 @@ definitions:
         type: integer
       name:
         type: string
-      planID:
+      planId:
         type: integer
-      updatePlanDate:
+      updateDate:
         type: string
       usage:
         type: number
-      userID:
-        type: integer
     type: object
   entities.PlanningRequest:
     properties:
@@ -285,32 +292,36 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieve a list of all plans
+      description: Retrieve all planning entries
       produces:
       - application/json
       responses:
         "200":
-          description: Success response with list of plans
+          description: Success response with all plans information
           schema:
             allOf:
             - $ref: '#/definitions/entities.Response'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/entities.Plan'
+                    $ref: '#/definitions/entities.PlanDetails'
                   type: array
               type: object
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
       summary: Get all plans
       tags:
       - plans
     post:
       consumes:
       - application/json
-      description: Create a new plan with the provided data
+      description: Create a new planning entry
       parameters:
-      - description: Plan Request
+      - description: Plan information
         in: body
-        name: plan
+        name: request
         required: true
         schema:
           $ref: '#/definitions/entities.PlanningRequest'
@@ -318,13 +329,13 @@ paths:
       - application/json
       responses:
         "200":
-          description: Success response with created plan
+          description: Success response with created plan information
           schema:
             allOf:
             - $ref: '#/definitions/entities.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/entities.Plan'
+                  $ref: '#/definitions/entities.PlanDetails'
               type: object
         "400":
           description: Invalid input
@@ -341,7 +352,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete a plan by ID
+      description: Delete a planning entry by its ID
       parameters:
       - description: Plan ID
         in: path
@@ -352,29 +363,29 @@ paths:
       - application/json
       responses:
         "200":
-          description: Success response with deleted plan
+          description: Success response indicating plan deletion
           schema:
             allOf:
             - $ref: '#/definitions/entities.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/entities.Plan'
+                  $ref: '#/definitions/entities.PlanDetails'
               type: object
-        "400":
-          description: Invalid ID format
-          schema:
-            $ref: '#/definitions/entities.ErrorResponse'
         "404":
           description: Plan not found
           schema:
+            $ref: '#/definitions/customerrors.CustomError'
+        "500":
+          description: Internal server error
+          schema:
             $ref: '#/definitions/entities.ErrorResponse'
-      summary: Delete a plan
+      summary: Delete a plan by ID
       tags:
       - plans
     get:
       consumes:
       - application/json
-      description: Retrieve a plan by its ID
+      description: Retrieve a planning entry by its ID
       parameters:
       - description: Plan ID
         in: path
@@ -385,20 +396,20 @@ paths:
       - application/json
       responses:
         "200":
-          description: Success response with plan details
+          description: Success response with plan information
           schema:
             allOf:
             - $ref: '#/definitions/entities.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/entities.Plan'
+                  $ref: '#/definitions/entities.PlanDetails'
               type: object
-        "400":
-          description: Invalid ID format
-          schema:
-            $ref: '#/definitions/entities.ErrorResponse'
         "404":
           description: Plan not found
+          schema:
+            $ref: '#/definitions/customerrors.CustomError'
+        "500":
+          description: Internal server error
           schema:
             $ref: '#/definitions/entities.ErrorResponse'
       summary: Get a plan by ID
@@ -407,16 +418,16 @@ paths:
     put:
       consumes:
       - application/json
-      description: Update a plan with the provided data
+      description: Update a planning entry by ID
       parameters:
       - description: Plan ID
         in: path
         name: id
         required: true
         type: integer
-      - description: Updated Plan Request
+      - description: Updated plan information
         in: body
-        name: plan
+        name: request
         required: true
         schema:
           $ref: '#/definitions/entities.PlanningRequest'
@@ -424,16 +435,20 @@ paths:
       - application/json
       responses:
         "200":
-          description: Success response with updated plan
+          description: Success response with updated plan information
           schema:
             allOf:
             - $ref: '#/definitions/entities.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/entities.Plan'
+                  $ref: '#/definitions/entities.PlanDetails'
               type: object
         "400":
-          description: Invalid ID format
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "404":
+          description: Plan not found
           schema:
             $ref: '#/definitions/entities.ErrorResponse'
         "500":
@@ -588,10 +603,6 @@ paths:
                 data:
                   $ref: '#/definitions/entities.SalaryAndResetDate'
               type: object
-        "404":
-          description: User not found
-          schema:
-            $ref: '#/definitions/entities.ErrorResponse'
         "500":
           description: Internal server error
           schema:
