# internal/handlers/users_handler.go
@@ -1,9 +1,9 @@
 package handlers
 
 import (
-	"time"
-
 	"github.com/gofiber/fiber/v2"
+	"github.com/goproject/internal/constants"
+	"github.com/goproject/internal/customerrors"
 	"github.com/goproject/internal/entities"
 	"github.com/goproject/internal/useases"
 	"github.com/goproject/pkg/log"
@@ -32,21 +32,17 @@ func UserHandler(usease useases.IUserUsecase, logger log.ILogger) IUserHandler {
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  entities.Response{data=entities.SalaryAndResetDate}  "Success response with user's salary information"
-// @Failure      404  {object}  entities.ErrorResponse  "User not found"
 // @Failure      500  {object}  entities.ErrorResponse  "Internal server error"
 // @Router       /users/salary [get]
 func (h *userHandler) GetSalary(c *fiber.Ctx) error {
-	user := h.u.GetSalaryAndDateReset(1)
-	if user == nil {
-		return c.JSON(&entities.ErrorResponse{
-			Code:         404,
-			Timestamp:    time.Now(),
-			ErrorMessage: "User not found",
-		})
+	userInfo := h.u.GetSalaryAndDateReset(1)
+	if userInfo == nil {
+		return customerrors.BUSINESS_ERROR("User not found")
 	}
 
 	return c.JSON(&entities.Response{
-		Code: 1000,
-		Data: user,
+		Code:        1000,
+		Description: constants.STATUS().SUCCESS,
+		Data:        userInfo,
 	})
 }
